--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <h1>FormRocket Demo</h1>
     <p>This is a demo of a form which is powered by FormRocket.</p>
     <p>ar x grape</p>
-
+    <form method="POST" action="https://www.formrocket.me/api/forms/74219764/Demo%20004/56950627424034100/post/showSuccessMessageOnDone">
+        <h4>Name</h4>
+        <input name="name" placeholder="Osama" />
+        <h4>Email</h4>
+        <input name="email" placeholder="hello@arcodez.xyz" />
+    </form>
     <!--
         will make the actual shit tomorrow
     -->
