--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demo - FormRocket</title>
-</head>
-<body>
-    <h1>FormRocket Demo</h1>
-    <p>This is a demo of a form which is powered by FormRocket.</p>
-    <p>ar x grape</p>
-    <form method="POST" action="https://www.formrocket.me/api/forms/74219764/Demo%20004/56950627424034100/post/showSuccessMessageOnDone">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <h1 class="title">FormRocket Demo</h1>
+      <p>This is a demo of a form which is powered by FormRocket.</p>
+      <p class="spesh">ar x grape</p>
+      <form
+        method="POST"
+        action="https://www.formrocket.me/api/forms/74219764/Demo%20004/56950627424034100/post/showSuccessMessageOnDone"
+      >
         <h4>Name</h4>
-        <input name="name" placeholder="Osama" />
+        <input autocomplete="off" name="name" placeholder="Joe" />
         <h4>Email</h4>
-        <input name="email" placeholder="hello@arcodez.xyz" />
-    </form>
-    <!--
+        <input autocomplete="off" name="email" placeholder="joe@mama.xyz" />
+      </form>
+      <!--
         will make the actual shit tomorrow
     -->
-</body>
+    </main>
+  </body>
 </html>
