--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         <h4>Email</h4>
         <input autocomplete="off" name="email" placeholder="joe@mama.xyz" />
       </form>
-      <!--
-        will make the actual shit tomorrow
-    -->
+      <h4>Who is better?</h4>
+      <input type="radio" id="ar" name="better" value="ar">
+<label for="ar">ar</label><br>
+<input type="radio" id="grp" name="better" value="grp">
+<label for="grp">littlegrapeguy</label><br>
     </main>
   </body>
 </html>
