--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 <label for="ar">ar</label><br>
 <input type="radio" id="grp" name="better" value="grp">
 <label for="grp">littlegrapeguy</label><br>
+
+<h4>Are you sure?</h4>
+<input required type="radio" id="yes" name="sure" value="yes">
+<label for="yes">Yes, I&apos;m positive!</label><br>
     </main>
   </body>
 </html>
