--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <h4>Are you sure?</h4>
 <input required type="radio" id="yes" name="sure" value="yes">
 <label for="yes">Yes, I&apos;m positive!</label><br>
+
+<input type="submit" value="Submit" class="button" />
     </main>
   </body>
 </html>
