--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <label for="grp">littlegrapeguy</label><br>
 
 <h4>Are you sure?</h4>
-<input required type="radio" id="yes" name="sure" value="yes">
-<label for="yes">Yes, I&apos;m positive!</label><br>
+<input type="checkbox" id="sure" name="sure" value="yes">
+<label for="sure"> I&apos;m sure!</label><br>
 
 <input type="submit" value="Submit" class="button" />
 
