--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <label for="grp">littlegrapeguy</label><br>
 
 <h4>Are you sure?</h4>
-<input type="checkbox" id="sure" name="sure" value="yes">
+<input type="checkbox" id="sure" name="sure" value="yes" required>
 <label for="sure"> I&apos;m sure!</label><br>
 
 <input type="submit" value="Submit" class="button" />
