--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <form method="POST"
       action="https://www.formrocket.me/api/forms/74219764/Demo%20004/56950627424034100/post/showSuccessMessageOnDone">
       <h4>Name</h4>
-      <input autocomplete="off" name="name" placeholder="Joe" />
+      <input type="text" autocomplete="off" name="name" placeholder="Joe" />
       <h4>Email</h4>
-      <input autocomplete="off" name="email" placeholder="joe@mama.xyz" />
+      <input type="email" autocomplete="off" name="email" placeholder="joe@mama.xyz" />
 
       <h4>Who is better?</h4>
       <input type="radio" id="ar" name="better" value="ar">
