--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main>
-    <h1 class="title">FormRocket Demo</h1>
+    <h1 class="title">FormRocket <span class="useAccent">Demo</span></h1>
     <p>This is a demo of a form which is powered by FormRocket.</p>
     <p class="spesh">ar x grape</p>
     <form method="POST"
