--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
   <main>
-    <h1 class="title">FormRocket <span class="useAccent">Demo</span></h1>
+    <h2 class="gradient"><b>FORMROCKET</b></h2>
+    <h1 class="title"><span class="useAccent">Demo</span> Form</h1>
     <p>This is a demo of a form which is powered by FormRocket.</p>
     <p class="spesh">ar x grape</p>
     <form method="POST"
