--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
   <link
     href="https://api.fonts.coollabs.io/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <meta property="og:type" content="website" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta property="og:site_name" content="FormRocket" />
+  <meta property="og:title" content="Demo Form" />
+  <meta name="title" content="Demo Form" />
+  <meta property="twitter:title" content="Demo Form" />
+  <meta property="og:description" content="This is a demo of a form which is powered by FormRocket." />
+  <meta property="twitter:description" content="This is a demo of a form which is powered by FormRocket." />
+  <meta name="description" content="This is a demo of a form which is powered by FormRocket." />
+  <meta name="twitter:site" content="@supersweetsuite" />
+  <meta property="og:url" content="https://demo.formrocket.me" />
+  <meta property="twitter:url" content="https://demo.formrocket.me" />
+  <meta name="theme-color" content="#121212" />
 </head>
 
 <body>
